Pipeline graph added

--- a/2rozdzial1.tex
+++ b/2rozdzial1.tex
@@ -12,7 +12,7 @@ Typically, mobile manipulators are designed to relieve people in hostile situati
 
 Augmenting the MMS design with a certain degree of autonomy, brings the possibility for the robot to be used as a human-assistant in the household. Most of current applications in this field refer to pick up and delivery services, that have the potential to improve lives of the elderly, injured and disabled people []. Furthermore, typical service robots in human environments are dedicated to accomplish only a single task, such as vacuum cleaning, lawn mowing, pool cleaning, window washing. Their operation is achieved by adjusting existing domestic appliances with a degree of autonomy. With a multi purpose robotic system such as a mobile manipulator, it is potentially possible not to replace existing devices but to replace the human operator. Autonomous gripping and transportation could also be used in the industry for designing flexible factory plants and intelligent warehouses, as discussed in []. 
 
-One of the most promising applications is the PR2 robot from the Willow Garage company. The PR2 robot has already proven successful in such dexterous experiments as opening doors, folding towels and serving beverages to people. 
+One of the most promising applications is the PR2 robot from the Willow Garage company. The PR2 robot has already proven successful in such dexterous experiments as opening doors, folding towels and serving beverages to people.  Amazon competition.
 
 In MMS robots, the unstructured environment and additional degrees of freedom complicate the control task. Furthermore, the workspace of a manipulator is often shared with people and other vehicles. Such work environment renders many potentially hazardous situations. Therefore, it requires a highly sophisticated control system, with vision based feedback. 
 
