--- a/praca.tex
+++ b/praca.tex
@@ -7,6 +7,9 @@
 \usepackage{enumerate}
 \usepackage{listings}
 \usepackage{verbatim}
+\usepackage{booktabs}
+\usepackage[table,xcdraw]{xcolor}
+\usepackage{siunitx}
 \usepackage{float}
 \lstloadlanguages{TeX}
 
