Affine transform added'

--- a/3rozdzial2.tex
+++ b/3rozdzial2.tex
@@ -10,9 +10,8 @@ What is a depth map. Classification of aqcuisition methods - passive and active,
 
 
 Why use 3D data? Applications in robotics!
-In computer vision, a depth map is a type of image, where each pixel value represents distance to the corresponding point in the scene. Just as in the grey scale image, it typically takes the form of a two dimensional array and it is the simplest way of representing and storing depth measurements from a scene.
 
-The first depth-map acquisition techniques emerged as a replacement for a contact-based coordinate measuring machines (CMM). CMMs were used in the industrial quality control applications and worked by recording the displacement of a probe tip sliding across a solid surface. Such method was time consuming and inadequate for fragile objects. Modern, contact-less 3D scanning apparatus overcome those limitations by using light to interact with the environment. The new technology had also extended the application area of 3D scanning to the field of robotic perception.
+The first depth acquisition techniques emerged as a replacement for a contact-based coordinate measuring machines (CMM). CMMs were used in the industrial quality control applications and worked by recording the displacement of a probe tip sliding across a solid surface. Such method was time consuming and inadequate for fragile objects. Modern, contact-less 3D scanning apparatus overcome those limitations by using light to interact with the environment. The new technology had also extended the application area of 3D scanning to the field of robotic perception.
 
 Methods of 3D data aqcuisition are classified by the light source they utilize to measure depth. Passive techniques rely only on the ambient light, whereas active ones operate by projecting illumination onto an object and recording the reflected beam. In the following sections, examples of both categories are presented, with a brief description of their principles of operation and a discussion of advantages and disadvantages.
 
