--- a/praca.tex
+++ b/praca.tex
@@ -8,6 +8,8 @@
 \usepackage{listings}
 \usepackage{verbatim}
 \usepackage{booktabs}
+\usepackage{mathtools}
+\usepackage{amssymb}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{siunitx}
 \usepackage{float}
